# DaeseongKotlin

./: README.md
API_test/: gradle.properties  settings.gradle
AppWidgetProvider_test/: settings.gradle
AudioRecorder_test/: settings.gradle
BLUETOOTH_test/: settings.gradle
BusInfo/: settings.gradle
Button_test/: settings.gradle
COIL_test/: settings.gradle
ContextMenu_test/: settings.gradle
Coroutine_test/: build.gradle  settings.gradle
EncryptedSharedPreference_test/: settings.gradle
FCM_test/: build.gradle.kts  settings.gradle.kts
FCM_test_old/: build.gradle  settings.gradle
FCM_test_sdk/: build.gradle  settings.gradle
FlexboxLayout_test/: settings.gradle
Flow_test/: settings.gradle.kts
FragmentContainerView_test/: settings.gradle
GridLayoutManager_test/: settings.gradle
HandlerThread_test/: settings.gradle
Http_test/: build.gradle  settings.gradle
JSONObject_test/: settings.gradle
Library_test/: build.gradle  settings.gradle
LocationService_test/: settings.gradle
NDK_test/: settings.gradle.kts
NDK_test/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NetworkCheck_test/: settings.gradle
Permission33sdk_test/: settings.gradle
Permission_test/: settings.gradle
PopupGrip_test/: settings.gradle
QRcode_test/: settings.gradle
Retrifit_test/: settings.gradle
Room_test/: settings.gradle
SendEmail_test/: settings.gradle
SensorManager_test/: settings.gradle
ServiceBOOT_COMPLETED_test/: settings.gradle
SharedPreferences_test/: settings.gradle
Shortcut_test/: settings.gradle.kts
Spannable_test/: settings.gradle
(+2415 files in other folders)
